# secure-vibe

./: .env.template  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
config/: mcp-config.json
examples/: claude-code-integration.md  claude-integration.md  cursor-integration.md  kilo-integration.md  opencode-integration.md  usage.py  windsurf-integration.md
src/: __init__.py  mcp_server.py
src/patcher/: __init__.py  engine.py  validators.py
src/patcher/fixes/: __init__.py  templates.py
src/scanner/: __init__.py  cve_database.py  engine.py
src/scanner/detectors/: __init__.py  base.py  generic.py  go.py  javascript.py  python.py  rust.py  secrets.py
src/scanner/rules/: __init__.py  rules.yaml
src/utils/: __init__.py  helpers.py
tests/: __init__.py  test_vulnerable_rust.rs
tests/sample_vulnerable/: app.js  app.py  main.go
tests/test_vulnerabilities/: vulnerable.go  vulnerable.js  vulnerable.py
